# app-casper

./: CMakeLists.txt  Makefile  README.md  ledger_app.toml  transaction.txt
.github/workflows/: codeql.yml  main.yml
app/: Makefile  Makefile.version
app/src/: apdu_handler.c  crypto.c  parser.c  parser_impl_deploy.c  parser_impl_deploy.h  parser_impl_transactionV1.c  parser_impl_transactionV1.h  parser_message.c  parser_special.c  parser_txdef.h  parser_utils.c  parser_utils.h  parser_wasm.c
app/src/common/: actions.h  app_main.c  parser.h  parser_common.h  tx.c  tx.h
fuzzing/: .gitignore  CMakeLists.txt  create_testcase.py  fuzz_casper.c  os_mocks.c
tests_zemu/tests/: common.ts  standard.test.ts
